PageRating/src/objects/Record_Page__c.object
<CustomObject>
    <fields>
        <fullName>Overall_Rating__c</fullName>
        <formula>IF( Total_Number_Of_Ratings__c = 0, 0,  Sum_Of_Ratings__c / Total_Number_Of_Ratings__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall Rating</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Page_Developer_Name__c</fullName>
        <label>Page Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Related_Object_Name__c</fullName>
        <label>Related Object Name</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sum_Of_Ratings__c</fullName>
        <label>Sum of Ratings</label>
        <summarizedField>Record_Page_Rating__c.Rating__c</summarizedField>
        <summaryForeignKey>Record_Page_Rating__c.Page_Name__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Number_Of_Ratings__c</fullName>
        <label>Total Number of Ratings</label>
        <summaryForeignKey>Record_Page_Rating__c.Page_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Record Page</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Page Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Record Pages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>